--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.9",
     "expo": "~36.0.0",
+    "expo-linear-gradient": "~8.0.0",
     "react": "~16.9.0",
     "react-devtools": "^3.6.3",
     "react-dom": "~16.9.0",
