--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "@babel/register": "^7.8.6",
+    "babel-preset-expo": "~8.0.0",
+    "jsdom-quokka-plugin": "^1.0.15"
   },
   "private": true
 }
